# audio2text-RAG

./: .gitignore  compose.yaml  main.py  pyproject.toml
scripts/: inngest.sh
src/: main.py
src/api/inngest/: __init__.py  generate.py  ingest.py  retrieve.py
src/api/v1/: __init__.py  _ingest.py  generate.py  ingest.py  retrieve.py
src/core/: config.py
src/repo/local/: retrieve.py
src/repo/postgres/: __init__.py  _retrieve.py  retrieve.py  storage.py
src/repo/qdrant/: __init__.py  retrieve.py  search.py  storage.py
src/schemas/: __init__.py  _response.py  doc.py  ii.py  request.py  response.py
src/services/internal/: __init__.py  _augment.py  _chat.py  _chunk.py  _process_docs.py  _speech2text.py  _summarize.py  augment.py  chat.py  dense_embed.py  fuse.py  inverted_index.py  process_docs.py  rerank.py  sparse_embed.py
src/services/public/: __init__.py  _generate.py  _retrieve.py  generate.py  ingest.py  retrieve.py
src/utils/: _fuse.py  _tokenizer.py  logging.py  tokenizer.py
test/: bm25.py  eval_cranfield.py  qdrant.py  test.sql
