[project]
name = "cs419-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cerebras-cloud-sdk>=1.50.1",
    "fastapi>=0.119.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub[cli]>=0.35.3",
    "inngest>=0.5.9",
    "ir-datasets>=0.5.11",
    "llama-index>=0.14.5",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-vector-stores-qdrant>=0.8.6",
    "nbconvert>=7.16.6",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
